<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_play"
        android:orderInCategory="100"
        android:title="@string/action_play"
        android:icon="@drawable/ic_play_vector"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_favourite"
        android:orderInCategory="100"
        android:title="@string/action_favourite"
        android:icon="@drawable/ic_favourite_gap_24dp"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_add_to_playlist"
        android:orderInCategory="100"
        android:title="@string/action_add_to_playlist"
        android:icon="@drawable/ic_playlist_add_white_24dp"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_share"
        android:orderInCategory="100"
        android:title="@string/action_share"
        android:icon="@drawable/ic_share_white_24dp"
        app:showAsAction="never" />

</menu>