<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:seekarc="http://schemas.android.com/apk/res-auto"
    android:background="#C0000000">

    <LinearLayout
        android:id="@+id/pane_anchor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/cover"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:transitionName="@string/transition_name_time"
                tools:text="00:00"
                android:visibility="gone"
                android:textColor="@color/colorWhite" />

            <com.project.blackspider.musician.view.ProgressView
                android:id="@+id/progress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                android:transitionName="@string/transition_name_progress"/>

            <com.project.blackspider.musician.view.SeekArc
                android:id="@+id/progress_changer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="60dp"
                seekarc:arcColor="@color/dark_red"
                seekarc:max="100"
                seekarc:progressColor="@color/red"
                seekarc:sweepAngle="272"
                seekarc:rotation="180"
                seekarc:startAngle="44"
                seekarc:thumb="@drawable/custom_seek_arc_control_selector"
                seekarc:touchInside="true"
                seekarc:touchOutside="false"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:transitionName="@string/transition_name_duration"
                tools:text="00:00"
                android:visibility="gone"
                android:textColor="@color/colorWhite" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/controls"
                android:layout_centerVertical="true">

                <include
                    android:id="@+id/title_view"
                    layout="@layout/area_track_title"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/controls"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:transitionGroup="true"
                android:weightSum="2">

                <ImageView
                    android:id="@+id/btn_play"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_play_vector"/>

                <ImageView
                    android:id="@+id/btn_next"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_skip_next_white_24dp"/>

            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
